--- a/views/visit.erb
+++ b/views/visit.erb
@@ -1,11 +1,14 @@
-<form action='/visit' method='post' class="form-inline well">
+<form action='/visit' method='post' class="navbar-form navbar-left well">
+  <% if @message %>
+    <div class="alert alert-success" role="alert"><%= @message %></div>
+  <% end %>
   <div class="form-group">
     <label for="name">Ваше имя</label>
-    <input type="text" class="form-control" id="name" placeholder="Name">
+    <input type="text" class="form-control" id="name" placeholder="Name" name="user_name">
   </div>
   <div class="form-group">
     <label for="date">Время визита</label>
-    <input type="datetime" class="form-control" id="date" placeholder="Date">
+    <input type="datetime" class="form-control" id="date" placeholder="Date" name="date_time">
   </div>
   <label for="selector">Парикмахер</label>
   <select class="form-control" id="selector" name="barber">
