Add color picker

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,7 +4,11 @@
 		<title>Best Barbershop in the World</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- Bootstrap -->
-		<link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css">
+		<link rel="stylesheet" href="/vendor/colorpicker/jquery.simplecolorpicker.css"
+		<link rel="stylesheet" href="/vendor/colorpicker/jquery.simplecolorpicker-fontawesome.css">
+    <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
 
 		<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -55,10 +59,9 @@
 
 	</div>
 
-
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="/vendor/jquery-1.9.1.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/vendor/colorpicker/js/jquery.simplecolorpicker.js"></script>
   </body>
 </html>
