--- a/views/users.erb
+++ b/views/users.erb
@@ -6,13 +6,14 @@
       <th>Phone number</th>
       <th>Date of Visit</th>
       <th>Barber</th>
+      <th>Color</th>
      </tr>
 	</thead>
 	<tbody>
 		<% @cust_arr.each do |line| %>
-			<% line.each do |col| %>
+			<% line.each_with_index do |col,index| %>
 		<tr>
-			<th scope="row">#</th>
+			<th scope="row"><%= index + 1 %></th>
 				<% col.each do |row| %>
 				<td><%= row.to_s.strip %></td>
 				<% end %>
