--- a/views/layout.erb
+++ b/views/layout.erb
@@ -51,8 +51,8 @@
 			</nav>
 
 			<div>
-			      <%if @error then %>
-			          <div class="alert alert-error"><%=@error%></div>
+			      <%if @error && @error != "" then %>
+			          <div class="alert alert-danger"><%=@error%></div>
 			      <% end %>
 			      <%= yield %>
 			</div>
