Keep barber choice

--- a/views/visit.erb
+++ b/views/visit.erb
@@ -18,9 +18,9 @@
   <label for="selector">Парикмахер</label>
   <select class="form-control" id="selector" name="barber">
   	<option></option>
-	  <option>Walter White</option>
-	  <option>Jessie Pinkman</option>
-	  <option>Gus Fring</option>
+	  <option <%= @barber == 'Walter White' ? 'selected' : '' %>>Walter White</option>
+	  <option <%= @barber == 'Jessie Pinkman' ? 'selected' : '' %>>Jessie Pinkman</option>
+	  <option <%= @barber == 'Gus Fring' ? 'selected' : '' %>>Gus Fring</option>
 	</select>
   </div>
   <div class="form-group">
