Save information to database

--- a/views/visit.erb
+++ b/views/visit.erb
@@ -1,3 +1,4 @@
+<h1>Записаться</h1>
 <form action='/visit' method='post' class="well">
   <% if @message %>
     <div class="alert alert-success" role="alert"><%= @message %></div>
