--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,7 +8,8 @@
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css">
 		<link rel="stylesheet" href="/vendor/colorpicker/jquery.simplecolorpicker.css"
 		<link rel="stylesheet" href="/vendor/colorpicker/jquery.simplecolorpicker-fontawesome.css">
-    <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+		<link rel="stylesheet" href="/vendor/datetimepicker/jquery.datetimepicker.css">
+		<script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
 
 		<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -63,5 +64,6 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
     <script src="/vendor/colorpicker/js/jquery.simplecolorpicker.js"></script>
+    <script src="/vendor/datetimepicker/js/jquery.datetimepicker.full.min.js"></script>
   </body>
 </html>
