--- a/views/visit.erb
+++ b/views/visit.erb
@@ -21,7 +21,10 @@
   	<option></option>
 	  <option <%= @barber == 'Walter White' ? 'selected' : '' %>>Walter White</option>
 	  <option <%= @barber == 'Jessie Pinkman' ? 'selected' : '' %>>Jessie Pinkman</option>
-	  <option <%= @barber == 'Gus Fring' ? 'selected' : '' %>>Gus Fring</option>
+	  <option <%= @barber == 'Hank Schrader' ? 'selected' : '' %>>Hank Schrader</option>
+    <option <%= @barber == 'Gus Fring' ? 'selected' : '' %>>Gus Fring</option>
+    <option <%= @barber == 'Saul Goodman' ? 'selected' : '' %>>Saul Goodman</option>
+    <option <%= @barber == 'Skyler White' ? 'selected' : '' %>>Skyler White</option>
 	</select>
   </div>
   <div class="form-group">
@@ -49,6 +52,6 @@
   $(function(){
     $('select[name="colorpicker"]').simplecolorpicker({theme: 'fontawesome'});
     $.datetimepicker.setLocale('ru');
-    $('#date').datetimepicker();
+    $('#date').datetimepicker({format:'Y-m-d H:i'});
   });
   </script>
