Move logic from view to app

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -36,6 +36,7 @@
 			    <ul class="nav navbar-nav">
 			      <li><a href="/secure/place">Secret</a></li>
 			      <li><a href="/visit">Записаться</a></li>
+			      <li><a href="/secure/customers">Клиенты</a></li>
 			    </ul>
 			    <ul class="nav navbar-nav navbar-right">
 			        <li class="dropdown">
