--- a/views/visit.erb
+++ b/views/visit.erb
@@ -19,12 +19,10 @@
   <label for="selector">Парикмахер</label>
   <select class="form-control" id="selector" name="barber">
   	<option></option>
-	  <option <%= @barber == 'Walter White' ? 'selected' : '' %>>Walter White</option>
-	  <option <%= @barber == 'Jessie Pinkman' ? 'selected' : '' %>>Jessie Pinkman</option>
-	  <option <%= @barber == 'Hank Schrader' ? 'selected' : '' %>>Hank Schrader</option>
-    <option <%= @barber == 'Gus Fring' ? 'selected' : '' %>>Gus Fring</option>
-    <option <%= @barber == 'Saul Goodman' ? 'selected' : '' %>>Saul Goodman</option>
-    <option <%= @barber == 'Skyler White' ? 'selected' : '' %>>Skyler White</option>
+    <% db = get_db
+      db.execute 'select * from barbers' do |row| %>
+        <option <%= @barber == row['name'] ? 'selected' : '' %>><%=row['name']%></option>
+    <% end %>
 	</select>
   </div>
   <div class="form-group">
@@ -52,6 +50,6 @@
   $(function(){
     $('select[name="colorpicker"]').simplecolorpicker({theme: 'fontawesome'});
     $.datetimepicker.setLocale('ru');
-    $('#date').datetimepicker({format:'Y-m-d H:i'});
+    $('#date').datetimepicker({format:'Y-m-d H:i',allowTimes:['09:00','10:00','11:00','12:00','13:00','14:00','15:00','16:00','17:00','18:00','19:00','20:00','21:00',]});
   });
   </script>
